--- a/maodez.html
+++ b/maodez.html
@@ -21,10 +21,81 @@
 <title>Maodez — Le Testament d’Azénor</title>
 
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
 
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
+
+<!-- ===== FOOTER (copié du modèle Ruadhán) ===== -->
+<style>
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.6rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1.2rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.35rem 0.7rem;
+  cursor:pointer;
+  font-size:0.9rem;
+}
+
+.social-icons .icon{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+  margin-right:0.5rem;
+}
+
+.social-icons svg{
+  width:16px;
+  height:16px;
+  fill:#f28c28;
+}
+
+.footer-right .buy-btn{
+  background:linear-gradient(#3a3a3a, #1f1f1f);
+  color:#f28c28;
+  padding:0.55rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+  border-radius:3px;
+  box-shadow:0 2px 4px rgba(0,0,0,0.6);
+}
+
+/* correction image de fond */
+main{
+  margin-bottom:0 !important;
+  padding-bottom:0 !important;
+}
+
+.site-footer{
+  margin-top:0 !important;
+}
+</style>
+
 </head>
 
 <body class="personnage">
@@ -47,6 +118,7 @@
 </header>
 
 <main>
+
 <section class="character-grid">
 
 <div class="portrait">
@@ -80,6 +152,7 @@
 <p>Dans <em>Le Testament d’Azénor</em>, Maodez n’est pas d’abord une figure miraculeuse, mais un homme marqué par le renoncement. Fils de roi ayant volontairement abandonné l’héritage politique, il porte en lui la tension entre noblesse et ascèse. Sa présence rappelle que la conversion d’un territoire commence toujours par un choix intérieur.</p>
 
 </section>
+
 </main>
 
 <footer class="site-footer">
@@ -89,25 +162,16 @@
 
 <div class="social-icons">
 
-<!-- LinkedIn -->
-<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" target="_blank" rel="noopener" title="LinkedIn">
-<svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
-</svg>
+<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank">
+<svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/></svg>
 </a>
 
-<!-- X -->
-<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" target="_blank" rel="noopener" title="X">
-<svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
-</svg>
+<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank">
+<svg viewBox="0 0 24 24"><path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/></svg>
 </a>
 
-<!-- Facebook -->
-<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" target="_blank" rel="noopener" title="Facebook">
-<svg aria-hidden="true" viewBox="0 0 24 24">
-<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
-</svg>
+<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank">
+<svg viewBox="0 0 24 24"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
 </a>
 
 </div>
@@ -116,6 +180,7 @@
 <div class="footer-right">
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
 </div>
+
 </div>
 </footer>
 
